# seL4-minimal-c

./: .gitmodules  Makefile  README.md
seL4/: CMakeLists.txt  common.cmake  x86_64-pc99.cmake
seL4/libc/: strcpy.c
seL4/seL4/: x86_64-pc99.cmake
seL4/seL4runtime/: x86_64-pc99.cmake
seL4/x86_64-pc99/: CMakeLists.txt
src/: main.c
